k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcanine-dashboard
  labels:
    app: arcanine-dashboard
spec:
  selector:
    matchLabels:
      app: arcanine-dashboard
  template:
    metadata:
      labels:
        app: arcanine-dashboard
    spec:
      containers:
        - name: arcanine-dashboard
          image: arcanine-dashboard
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: arcanine-dashboard
spec:
  selector:
    app: arcanine-dashboard
  ports:
    - name: application
      protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcanine-dashboard-ingress
spec:
  ingressClassName: kong
  rules:
  - host: k8s.arcanine.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arcanine-dashboard
            port:
              number: 3000
